fix: message white spaces

--- a/resources/scss/components/Chat/_message.scss
+++ b/resources/scss/components/Chat/_message.scss
@@ -8,7 +8,7 @@
 
 	width: 100%;
 
-	margin-bottom: space(2);
+	margin-bottom: space(1);
 	padding: space(1);
 
 	border-radius: 2px;
@@ -95,4 +95,5 @@
 	padding-top: space(1);
 	padding-left: space(.5);
 	overflow-wrap: anywhere;
+	line-height: 1.2rem;
 }
